# godot-pure-data

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dev.sh
.github/workflows/: build.yml
addons/pure-data/: pure_data.gdextension
ci/: ci.bash  package.bash
demo/: icon.svg.import  patch.pd  project.godot
demo/addons/: CSGSphere3D.gd  test.gd  test.gdshader  test.tscn
demo/patches/: snap2scale.pd  trst.pd
project/: default_bus_layout.tres  icon.svg.import  project.godot
project/addons/pure-data/: icon.png.import  pd-godot.lib  plugin.cfg  pure_data.gd  pure_data.gd.uid  pure_data.gdextension  pure_data.gdextension.uid  pure_data_abstraction.gd  pure_data_abstraction.gd.uid  pure_data_patch_file.gd  pure_data_patch_file.gd.uid  pure_data_patch_import_plugin.gd  pure_data_patch_import_plugin.gd.uid  pure_data_patch_instance.gd  pure_data_patch_instance.gd.uid
project/demo/: abstraction.pd  abstraction.pd.import  bus_layout.tres  debug_label.gd  debug_label.gd.uid  effect.pd  effect.pd.import  main.gd  main.gd.uid  main.tscn  patch.pd  patch.pd.import
project/demo/assets/: House in a Forest Loop.ogg.import
src/: gdexample.cpp  gdexample.h  pure_data_audio_effect.cpp  pure_data_audio_effect.h  pure_data_audio_stream_player.cpp  pure_data_audio_stream_player.h  pure_data_instance.cpp  pure_data_instance.h  pure_data_patch.cpp  pure_data_patch.h  register_types.cpp
